src/rust/atoms/snapshots/syn_state_machine__rust__atoms__typed_literals__tests__concat_idents! (parse it_matches_simple_string_lit).snap
---
source: src/rust/atoms/typed_literals.rs
expression: "crate::parse::<StringLit>(q.clone())"
---
Ok(
    StringLit {
        raw: "\"Hello World\"",
        value: None,
        num_hashes: None,
        start_suffix: 13,
    },
)
