src/rust/atoms/snapshots/syn_state_machine__rust__atoms__typed_literals__tests__concat_idents! (peek it_matches_simple_string_lit).snap
---
source: src/rust/atoms/typed_literals.rs
expression: "crate::test_peek::<StringLit>(q.clone())"
---
Some(
    1,
)
