src/rust/atoms/snapshots/syn_state_machine__rust__atoms__typed_literals__tests__it_matches_simple_string_lit.snap
---
source: src/rust/atoms/typed_literals.rs
expression: "(insta_match_test!(+ parse StringLit : \"Hello World\"),\n    insta_match_test!(* peek StringLit : \"Hello World\"))"
---
(
    Ok(
        StringLit {
            raw: "\"Hello World\"",
            value: None,
            num_hashes: None,
            start_suffix: 13,
        },
    ),
    Some(
        1,
    ),
)
